--- a/jupyter/decorators.ipynb
+++ b/jupyter/decorators.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,26 +135,43 @@
     "    # property decorator allows us to access the radius as an attribute instead of a method\n",
     "    @property\n",
     "    def radius(self):\n",
-    "        return self._radius"
+    "        print('Getting radius')\n",
+    "        return self._radius\n",
+    "    \n",
+    "    # can also use a setter to change the value of the radius\n",
+    "    @radius.setter\n",
+    "    def radius(self, value):\n",
+    "        print('Setting radius')\n",
+    "        if value < 0:\n",
+    "            raise ValueError('Radius must be non-negative')\n",
+    "        self._radius = value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "Getting radius\n",
+      "5\n",
+      "Setting radius\n",
+      "Getting radius\n",
+      "10\n"
      ]
     }
    ],
    "source": [
     "my_circle = Circle(radius=5)\n",
     "\n",
-    "# because of the property decorator, we can access the radius as an attribute\n",
+    "# because of the property decorator, we can access the radius as an attribute (and print statements will be executed)\n",
+    "print(my_circle.radius)\n",
+    "\n",
+    "# because of the setter decorator, we can change the radius as an attribute (and print statements will be executed)\n",
+    "my_circle.radius = 10\n",
     "print(my_circle.radius)"
    ]
   }
