--- a/jupyter/decorators.ipynb
+++ b/jupyter/decorators.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,12 +144,19 @@
     "        print('Setting radius')\n",
     "        if value < 0:\n",
     "            raise ValueError('Radius must be non-negative')\n",
-    "        self._radius = value"
+    "        self._radius = value\n",
+    "        \n",
+    "        \n",
+    "    # can also use a deleter to delete the radius\n",
+    "    @radius.deleter\n",
+    "    def radius(self):\n",
+    "        print('Deleting radius')\n",
+    "        del self._radius"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +167,8 @@
       "5\n",
       "Setting radius\n",
       "Getting radius\n",
-      "10\n"
+      "10\n",
+      "Deleting radius\n"
      ]
     }
    ],
@@ -172,7 +180,17 @@
     "\n",
     "# because of the setter decorator, we can change the radius as an attribute (and print statements will be executed)\n",
     "my_circle.radius = 10\n",
-    "print(my_circle.radius)"
+    "print(my_circle.radius)\n",
+    "\n",
+    "# delete radius - call it like this:\n",
+    "del my_circle.radius"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Static Methods"
    ]
   }
  ],
