--- a/jupyter/decorators.ipynb
+++ b/jupyter/decorators.ipynb
@@ -192,6 +192,66 @@
    "source": [
     "## Static Methods"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Math:\n",
+    "    # static method is used for a method that doesn't belong to an instance of the class\n",
+    "    @staticmethod\n",
+    "    def add(a, b):\n",
+    "        return a + b\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def multiply(a, b):\n",
+    "        return a * b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Math.add(5, 10))\n",
+    "\n",
+    "my_math = Math()\n",
+    "\n",
+    "# can also call static methods from an instance of the class, but usually dont' do this.\n",
+    "# static methods are meant to organize methods\n",
+    "print(my_math.multiply(5, 10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Class Method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Person:\n",
+    "    species = 'Homosapien'\n",
+    "    \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
