--- a/jupyter/decorators.ipynb
+++ b/jupyter/decorators.ipynb
@@ -243,15 +243,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Person:\n",
     "    species = 'Homosapien'\n",
     "    \n",
+    "    # class method transforms the first argument to the class itself\n",
+    "    @classmethod\n",
+    "    def get_species(cls):\n",
+    "        return cls.species\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
