--- a/jupyter/decorators.ipynb
+++ b/jupyter/decorators.ipynb
@@ -243,26 +243,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Person:\n",
     "    species = 'Homosapien'\n",
     "    \n",
-    "    # class method transforms the first argument to the class itself\n",
+    "    # class method transforms the first argument to the class itself instead of the instance (usually called self)\n",
+    "    # so can only access class variables, not instance variables\n",
     "    @classmethod\n",
     "    def get_species(cls):\n",
+    "        print(cls)\n",
     "        return cls.species\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class '__main__.Person'>\n",
+      "Homosapien\n",
+      "<class '__main__.Person'>\n",
+      "Homosapien\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Person.get_species())\n",
+    "\n",
+    "john = Person()\n",
+    "print(john.get_species())"
+   ]
   }
  ],
  "metadata": {
