--- a/jupyter/decorators.ipynb
+++ b/jupyter/decorators.ipynb
@@ -281,6 +281,63 @@
     "john = Person()\n",
     "print(john.get_species())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### FuncTools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Building our own cache\n",
+    "def fibonacci_cache(n, cache=None):\n",
+    "    if cache is None:\n",
+    "        cache = {}\n",
+    "    if n in cache:\n",
+    "        return cache[n]\n",
+    "    if n <= 1:\n",
+    "        return n\n",
+    "    print(f'Calculating fibonacci({n})')\n",
+    "    cache[n] = fibonacci_cache(n-1, cache) + fibonacci_cache(n-2, cache)\n",
+    "    return cache[n]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating fibonacci(6)\n",
+      "Calculating fibonacci(5)\n",
+      "Calculating fibonacci(4)\n",
+      "Calculating fibonacci(3)\n",
+      "Calculating fibonacci(2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fibonacci_cache(6)"
+   ]
   }
  ],
  "metadata": {
