--- a/jupyter/decorators.ipynb
+++ b/jupyter/decorators.ipynb
@@ -338,6 +338,67 @@
    "source": [
     "fibonacci_cache(6)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import functools\n",
+    "\n",
+    "# Using the built-in cache decorator\n",
+    "# use functools.lru_cache if you want to limit the size of the cache to make sure it doesn't grow too large. Can specify the maxsize parameter\n",
+    "@functools.cache\n",
+    "def fibonacci(n):\n",
+    "    if n <= 1:\n",
+    "        return n\n",
+    "    print(f'Calculating fibonacci({n})')\n",
+    "    return fibonacci(n-1) + fibonacci(n-2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating fibonacci(6)\n",
+      "Calculating fibonacci(5)\n",
+      "Calculating fibonacci(4)\n",
+      "Calculating fibonacci(3)\n",
+      "Calculating fibonacci(2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fibonacci(6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DataClass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
