--- a/jupyter/decorators.ipynb
+++ b/jupyter/decorators.ipynb
@@ -396,9 +396,56 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "# Example without the dataclass decorator\n",
+    "class Product:\n",
+    "    def __init__(self, name, price, quantity = 0):\n",
+    "        self.name = name\n",
+    "        self.price = price\n",
+    "        self.quantity = quantity\n",
+    "        \n",
+    "    def total_cost(self):\n",
+    "        return self.price * self.quantity\n",
+    "\n",
+    "    # __repr__ is used to represent the object as a string. This is used when using the print function\n",
+    "    def __repr__(self):\n",
+    "        return f'Product(name={self.name}, price={self.price})'\n",
+    "    \n",
+    "    # __eq__ is used to compare two objects. This is used when comparing two objects with the == operator\n",
+    "    def __eq__(self, other):\n",
+    "        return self.name == other.name and self.price == other.price and self.quantity == other.quantity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19.9\n",
+      "Product(name=apples, price=1.99)\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "apples = Product('apples', 1.99, 10)\n",
+    "print(apples.total_cost())\n",
+    "print(apples)\n",
+    "bananas = Product('bananas', 0.99, 5)\n",
+    "apples2 = Product('apples', 1.99, 10)\n",
+    "\n",
+    "print(apples == apples2)\n",
+    "print(apples == bananas)"
+   ]
   }
  ],
  "metadata": {
