--- a/jupyter/decorators.ipynb
+++ b/jupyter/decorators.ipynb
@@ -446,6 +446,53 @@
     "print(apples == apples2)\n",
     "print(apples == bananas)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# easier to use dataclass decorator which automatically generates the __init__ and __repr__ methods\n",
+    "\n",
+    "from dataclasses import dataclass\n",
+    "\n",
+    "@dataclass\n",
+    "class Product_dc:\n",
+    "    name: str\n",
+    "    price: float\n",
+    "    quantity: int = 0\n",
+    "\n",
+    "    def total_cost(self):\n",
+    "        return self.price * self.quantity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19.9\n",
+      "Product_dc(name='apples', price=1.99, quantity=10)\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "apples = Product_dc('apples', 1.99, 10)\n",
+    "print(apples.total_cost())\n",
+    "print(apples)\n",
+    "bananas = Product_dc('bananas', 0.99, 5)\n",
+    "apples2 = Product_dc('apples', 1.99, 10)\n",
+    "\n",
+    "print(apples == apples2)\n",
+    "print(apples == bananas)"
+   ]
   }
  ],
  "metadata": {
