func to get password

--- a/practice/excel_password.ipynb
+++ b/practice/excel_password.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "import openpyxl\n",
-    "from IPython.display import display, Markdown"
+    "from IPython.display import display, Markdown\n",
+    "import msoffcrypto"
    ]
   },
   {
@@ -528,10 +529,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "import msoffcrypto\n",
     "\n",
     "def decrypt_excel(file_path, password, output_file):\n",
     "    # Open the encrypted file\n",
