--- a/practice/excel_password.ipynb
+++ b/practice/excel_password.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,18 +493,8 @@
     "\n",
     "# print out all the rows 15 to 20\n",
     "for row in sheet.iter_rows(min_row=15, max_row=20):\n",
-    "    pretty_print_title(f\"Row {row[0].row}\", \"\")\n",
-    "    for cell in row:\n",
-    "        print(cell.value)\n",
-    "    print(\"\\n\")"
+    "    pretty_print_title(f\"Row {row[0].row}\", \"\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -530,25 +520,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
-    "def decrypt_excel(file_path, password, output_file):\n",
+    "def decrypt_excel(file_path, password):\n",
     "    # Open the encrypted file\n",
     "    with open(file_path, \"rb\") as encrypted_file:\n",
     "        office_file = msoffcrypto.OfficeFile(encrypted_file)\n",
+    "        # print out encryption info\n",
+    "        print(office_file.is_encrypted())\n",
+    "        \n",
+    "        try:\n",
     "\n",
-    "        # Specify the password\n",
-    "        office_file.load_key(password=password)\n",
-    "\n",
-    "        # Write the decrypted file\n",
-    "        with open(output_file, \"wb\") as decrypted_file:\n",
-    "            office_file.decrypt(decrypted_file)\n",
+    "            office_file.load_key(password=password)\n",
+    "                \n",
+    "        except Exception as e:\n",
+    "            print(f\"Error: {e}\")\n",
+    "            return\n",
     "\n",
     "# Usage\n",
-    "decrypt_excel(\"path_to_encrypted_file.xlsx\", \"your_password\", \"decrypted_file.xlsx\")\n"
+    "decrypt_excel(file_path=file_path, password=\"your_password\")\n"
    ]
   }
  ],
