--- a/jupyter/Practice.ipynb
+++ b/jupyter/Practice.ipynb
@@ -1047,6 +1047,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "e1bfe88e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find the 2 primes that sum to an even number\n",
+    "\n",
+    "# Function to check if a number is prime\n",
+    "def is_prime(n: int) -> bool:\n",
+    "    if n < 2:\n",
+    "        return False\n",
+    "    for i in range(2, int(n ** 0.5) + 1):\n",
+    "        if n % i == 0:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "# Function to find the two prime numbers that sum to an even number\n",
+    "def find_two_primes(n: int) -> tuple[int, int]:\n",
+    "    # iterate from 1 through n/2 and check if that num and the compliment is prime\n",
+    "    for i in range(1, n // 2 + 1):\n",
+    "        print(i, n - i)\n",
+    "        if is_prime(i) and is_prime(n - i):\n",
+    "            return i, n - i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "93d94c45",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 9\n",
+      "2 8\n",
+      "3 7\n",
+      "(3, 7)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(find_two_primes(10))\n",
+    "# print(find_two_primes(20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "678ba088",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(is_prime(11))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "58549874",
    "metadata": {},
@@ -1128,7 +1195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
