--- a/jupyter/classes.ipynb
+++ b/jupyter/classes.ipynb
@@ -7,14 +7,14 @@
    "outputs": [],
    "source": [
     "# Singleton: A class of which only a single instance can exist\n",
-    "\n",
+    "# First way to create it\n",
     "class Singleton_1:\n",
     "    # static variable to hold the single instance of the class\n",
     "    _instance = None\n",
     "\n",
     "    def __new__(cls):\n",
     "        if not cls._instance:\n",
-    "            cls._instance = super(Singleton, cls).__new__(cls)\n",
+    "            cls._instance = super(Singleton_1, cls).__new__(cls)\n",
     "        return cls._instance"
    ]
   },
@@ -32,6 +32,7 @@
     }
    ],
    "source": [
+    "# Second way to create it\n",
     "class Singleton_2:\n",
     "    # static variable to hold the single instance of the class\n",
     "    _instance = None\n",
