--- a/jupyter/classes.ipynb
+++ b/jupyter/classes.ipynb
@@ -63,10 +63,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Singleton pattern with twist: First, instead of storing one instance, store two instances. And in every even call of getInstance(), return the first instance and in every odd call of getInstance(), return the second instance.\n",
+    "\n",
+    "class Singleton_3:\n",
+    "    _instance1 = None\n",
+    "    _instance2 = None\n",
+    "    _is_odd_call = True\n",
+    "    \n",
+    "    def __init__(self) -> None:\n",
+    "        # if odd, check if instance1 exists. If not, create it\n",
+    "        # if even, check if instance 2 exists. If not, create it\n",
+    "        if Singleton_3._is_odd_call:\n",
+    "            if Singleton_3._instance1 is None:\n",
+    "                Singleton_3._instance1 = self\n",
+    "                    \n",
+    "    \n",
+    "    def get_instance():\n",
+    "        \n",
+    "        # flip is_odd_call\n",
+    "        Singleton_3._is_odd_call = not Singleton_3._is_odd_call"
+   ]
   }
  ],
  "metadata": {
