--- a/jupyter/Practice.ipynb
+++ b/jupyter/Practice.ipynb
@@ -1115,6 +1115,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "35430884",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# two_sum: given\n",
+    "def two_sum(nums, target):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69fdb6c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# isPalindrome: ignore non-alphanumeric characters. uppercase and lowercase are equal\n",
+    "\n",
+    "def is_palindrome:\n",
+    "    # have 2 pointers - 1 at beginning and one at end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "58549874",
    "metadata": {},
    "outputs": [],
@@ -1195,7 +1220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
