--- a/jupyter/scratch.ipynb
+++ b/jupyter/scratch.ipynb
@@ -20,8 +20,9 @@
     "# Selection Sort\n",
     "\n",
     "def selection_sort(arr):\n",
-    "    # i is the element\n",
+    "    # i is the first element of the unsorted. Everything before it is sorted\n",
     "    for i in range(len(arr)):\n",
+    "        # initialize the index of the minimum value to be i. If later numbers are lower, we update it\n",
     "        min_index = i\n",
     "        for j in range(i+1, len(arr)):\n",
     "            if arr[j] < arr[min_index]:\n",
